{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 2,
  "lineage": "94a2f626-7116-f57c-27a9-13a8e572dd70",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfer--awseb-e-nga34njify-stack-AWSEBLoadBalancerSecurityGroup-tJkV3qWO3n2O_sg-056584eab19ba2c2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:us-east-2:571600864139:security-group/sg-056584eab19ba2c2a",
            "description": "Elastic Beanstalk created security group used when no ELB security groups are specified during ELB creation",
            "egress.#": "1",
            "egress.0.cidr_blocks.#": "1",
            "egress.0.cidr_blocks.0": "0.0.0.0/0",
            "egress.0.description": "",
            "egress.0.from_port": "80",
            "egress.0.ipv6_cidr_blocks.#": "0",
            "egress.0.prefix_list_ids.#": "0",
            "egress.0.protocol": "tcp",
            "egress.0.security_groups.#": "0",
            "egress.0.self": "false",
            "egress.0.to_port": "80",
            "id": "sg-056584eab19ba2c2a",
            "ingress.#": "1",
            "ingress.0.cidr_blocks.#": "1",
            "ingress.0.cidr_blocks.0": "0.0.0.0/0",
            "ingress.0.description": "",
            "ingress.0.from_port": "80",
            "ingress.0.ipv6_cidr_blocks.#": "0",
            "ingress.0.prefix_list_ids.#": "0",
            "ingress.0.protocol": "tcp",
            "ingress.0.security_groups.#": "0",
            "ingress.0.self": "false",
            "ingress.0.to_port": "80",
            "name": "awseb-e-nga34njify-stack-AWSEBLoadBalancerSecurityGroup-tJkV3qWO3n2O",
            "name_prefix": "",
            "owner_id": "571600864139",
            "tags.%": "3",
            "tags.Name": "python-env",
            "tags.elasticbeanstalk:environment-id": "e-nga34njify",
            "tags.elasticbeanstalk:environment-name": "python-env",
            "tags_all.%": "3",
            "tags_all.Name": "python-env",
            "tags_all.elasticbeanstalk:environment-id": "e-nga34njify",
            "tags_all.elasticbeanstalk:environment-name": "python-env",
            "vpc_id": "vpc-0a39a9d74cc90453c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfer--awseb-e-nga34njify-stack-AWSEBSecurityGroup-srT1WGCR53gU_sg-0f25e88bd450df1be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:us-east-2:571600864139:security-group/sg-0f25e88bd450df1be",
            "description": "SecurityGroup for ElasticBeanstalk environment.",
            "egress.#": "1",
            "egress.0.cidr_blocks.#": "1",
            "egress.0.cidr_blocks.0": "0.0.0.0/0",
            "egress.0.description": "",
            "egress.0.from_port": "0",
            "egress.0.ipv6_cidr_blocks.#": "0",
            "egress.0.prefix_list_ids.#": "0",
            "egress.0.protocol": "-1",
            "egress.0.security_groups.#": "0",
            "egress.0.self": "false",
            "egress.0.to_port": "0",
            "id": "sg-0f25e88bd450df1be",
            "ingress.#": "1",
            "ingress.0.cidr_blocks.#": "0",
            "ingress.0.description": "",
            "ingress.0.from_port": "80",
            "ingress.0.ipv6_cidr_blocks.#": "0",
            "ingress.0.prefix_list_ids.#": "0",
            "ingress.0.protocol": "tcp",
            "ingress.0.security_groups.#": "1",
            "ingress.0.security_groups.0": "sg-056584eab19ba2c2a",
            "ingress.0.self": "false",
            "ingress.0.to_port": "80",
            "name": "awseb-e-nga34njify-stack-AWSEBSecurityGroup-srT1WGCR53gU",
            "name_prefix": "",
            "owner_id": "571600864139",
            "tags.%": "3",
            "tags.Name": "python-env",
            "tags.elasticbeanstalk:environment-id": "e-nga34njify",
            "tags.elasticbeanstalk:environment-name": "python-env",
            "tags_all.%": "3",
            "tags_all.Name": "python-env",
            "tags_all.elasticbeanstalk:environment-id": "e-nga34njify",
            "tags_all.elasticbeanstalk:environment-name": "python-env",
            "vpc_id": "vpc-0a39a9d74cc90453c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfer--default_sg-0b02998105dcfc1bf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:us-east-2:571600864139:security-group/sg-0b02998105dcfc1bf",
            "description": "default VPC security group",
            "egress.#": "5",
            "egress.0.cidr_blocks.#": "1",
            "egress.0.cidr_blocks.0": "0.0.0.0/0",
            "egress.0.description": "",
            "egress.0.from_port": "0",
            "egress.0.ipv6_cidr_blocks.#": "0",
            "egress.0.prefix_list_ids.#": "0",
            "egress.0.protocol": "-1",
            "egress.0.security_groups.#": "0",
            "egress.0.self": "false",
            "egress.0.to_port": "0",
            "egress.1.cidr_blocks.#": "1",
            "egress.1.cidr_blocks.0": "0.0.0.0/0",
            "egress.1.description": "",
            "egress.1.from_port": "443",
            "egress.1.ipv6_cidr_blocks.#": "0",
            "egress.1.prefix_list_ids.#": "0",
            "egress.1.protocol": "tcp",
            "egress.1.security_groups.#": "0",
            "egress.1.self": "false",
            "egress.1.to_port": "443",
            "egress.2.cidr_blocks.#": "1",
            "egress.2.cidr_blocks.0": "0.0.0.0/0",
            "egress.2.description": "",
            "egress.2.from_port": "6379",
            "egress.2.ipv6_cidr_blocks.#": "0",
            "egress.2.prefix_list_ids.#": "0",
            "egress.2.protocol": "tcp",
            "egress.2.security_groups.#": "0",
            "egress.2.self": "false",
            "egress.2.to_port": "6379",
            "egress.3.cidr_blocks.#": "1",
            "egress.3.cidr_blocks.0": "0.0.0.0/0",
            "egress.3.description": "",
            "egress.3.from_port": "6380",
            "egress.3.ipv6_cidr_blocks.#": "0",
            "egress.3.prefix_list_ids.#": "0",
            "egress.3.protocol": "tcp",
            "egress.3.security_groups.#": "0",
            "egress.3.self": "false",
            "egress.3.to_port": "6380",
            "egress.4.cidr_blocks.#": "0",
            "egress.4.description": "",
            "egress.4.from_port": "3306",
            "egress.4.ipv6_cidr_blocks.#": "0",
            "egress.4.prefix_list_ids.#": "0",
            "egress.4.protocol": "tcp",
            "egress.4.security_groups.#": "1",
            "egress.4.security_groups.0": "sg-0b22ad61b9e0f9367",
            "egress.4.self": "false",
            "egress.4.to_port": "3306",
            "id": "sg-0b02998105dcfc1bf",
            "ingress.#": "5",
            "ingress.0.cidr_blocks.#": "1",
            "ingress.0.cidr_blocks.0": "0.0.0.0/0",
            "ingress.0.description": "",
            "ingress.0.from_port": "0",
            "ingress.0.ipv6_cidr_blocks.#": "0",
            "ingress.0.prefix_list_ids.#": "0",
            "ingress.0.protocol": "-1",
            "ingress.0.security_groups.#": "0",
            "ingress.0.self": "false",
            "ingress.0.to_port": "0",
            "ingress.1.cidr_blocks.#": "1",
            "ingress.1.cidr_blocks.0": "0.0.0.0/0",
            "ingress.1.description": "",
            "ingress.1.from_port": "0",
            "ingress.1.ipv6_cidr_blocks.#": "0",
            "ingress.1.prefix_list_ids.#": "0",
            "ingress.1.protocol": "tcp",
            "ingress.1.security_groups.#": "0",
            "ingress.1.self": "false",
            "ingress.1.to_port": "65535",
            "ingress.2.cidr_blocks.#": "1",
            "ingress.2.cidr_blocks.0": "0.0.0.0/0",
            "ingress.2.description": "",
            "ingress.2.from_port": "6379",
            "ingress.2.ipv6_cidr_blocks.#": "0",
            "ingress.2.prefix_list_ids.#": "0",
            "ingress.2.protocol": "tcp",
            "ingress.2.security_groups.#": "0",
            "ingress.2.self": "true",
            "ingress.2.to_port": "6379",
            "ingress.3.cidr_blocks.#": "0",
            "ingress.3.description": "",
            "ingress.3.from_port": "6380",
            "ingress.3.ipv6_cidr_blocks.#": "0",
            "ingress.3.prefix_list_ids.#": "0",
            "ingress.3.protocol": "tcp",
            "ingress.3.security_groups.#": "0",
            "ingress.3.self": "true",
            "ingress.3.to_port": "6380",
            "ingress.4.cidr_blocks.#": "0",
            "ingress.4.description": "Allow EC2 access",
            "ingress.4.from_port": "3306",
            "ingress.4.ipv6_cidr_blocks.#": "0",
            "ingress.4.prefix_list_ids.#": "0",
            "ingress.4.protocol": "tcp",
            "ingress.4.security_groups.#": "1",
            "ingress.4.security_groups.0": "sg-0b22ad61b9e0f9367",
            "ingress.4.self": "false",
            "ingress.4.to_port": "3306",
            "name": "default",
            "name_prefix": "",
            "owner_id": "571600864139",
            "tags.%": "1",
            "tags.cloud-nuke-first-seen": "2024-12-07T19:06:20Z",
            "tags_all.%": "1",
            "tags_all.cloud-nuke-first-seen": "2024-12-07T19:06:20Z",
            "vpc_id": "vpc-0a39a9d74cc90453c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfer--launch-wizard-1_sg-0e8ffe4db09a0dbfe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:us-east-2:571600864139:security-group/sg-0e8ffe4db09a0dbfe",
            "description": "launch-wizard-1 created 2024-11-20T20:51:25.739Z",
            "egress.#": "2",
            "egress.0.cidr_blocks.#": "1",
            "egress.0.cidr_blocks.0": "0.0.0.0/0",
            "egress.0.description": "",
            "egress.0.from_port": "0",
            "egress.0.ipv6_cidr_blocks.#": "0",
            "egress.0.prefix_list_ids.#": "0",
            "egress.0.protocol": "-1",
            "egress.0.security_groups.#": "0",
            "egress.0.self": "false",
            "egress.0.to_port": "0",
            "egress.1.cidr_blocks.#": "1",
            "egress.1.cidr_blocks.0": "0.0.0.0/0",
            "egress.1.description": "",
            "egress.1.from_port": "443",
            "egress.1.ipv6_cidr_blocks.#": "0",
            "egress.1.prefix_list_ids.#": "0",
            "egress.1.protocol": "tcp",
            "egress.1.security_groups.#": "0",
            "egress.1.self": "false",
            "egress.1.to_port": "443",
            "id": "sg-0e8ffe4db09a0dbfe",
            "ingress.#": "3",
            "ingress.0.cidr_blocks.#": "1",
            "ingress.0.cidr_blocks.0": "0.0.0.0/0",
            "ingress.0.description": "",
            "ingress.0.from_port": "0",
            "ingress.0.ipv6_cidr_blocks.#": "0",
            "ingress.0.prefix_list_ids.#": "0",
            "ingress.0.protocol": "-1",
            "ingress.0.security_groups.#": "0",
            "ingress.0.self": "false",
            "ingress.0.to_port": "0",
            "ingress.1.cidr_blocks.#": "1",
            "ingress.1.cidr_blocks.0": "0.0.0.0/0",
            "ingress.1.description": "",
            "ingress.1.from_port": "22",
            "ingress.1.ipv6_cidr_blocks.#": "0",
            "ingress.1.prefix_list_ids.#": "0",
            "ingress.1.protocol": "tcp",
            "ingress.1.security_groups.#": "0",
            "ingress.1.self": "false",
            "ingress.1.to_port": "22",
            "ingress.2.cidr_blocks.#": "0",
            "ingress.2.description": "",
            "ingress.2.from_port": "3306",
            "ingress.2.ipv6_cidr_blocks.#": "0",
            "ingress.2.prefix_list_ids.#": "0",
            "ingress.2.protocol": "tcp",
            "ingress.2.security_groups.#": "1",
            "ingress.2.security_groups.0": "sg-0b02998105dcfc1bf",
            "ingress.2.self": "false",
            "ingress.2.to_port": "3306",
            "name": "launch-wizard-1",
            "name_prefix": "",
            "owner_id": "571600864139",
            "tags.%": "1",
            "tags.cloud-nuke-first-seen": "2024-12-07T19:06:21Z",
            "tags_all.%": "1",
            "tags_all.cloud-nuke-first-seen": "2024-12-07T19:06:21Z",
            "vpc_id": "vpc-0a39a9d74cc90453c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfer--launch-wizard-2_sg-0b22ad61b9e0f9367",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:us-east-2:571600864139:security-group/sg-0b22ad61b9e0f9367",
            "description": "launch-wizard-2 created 2024-12-03T19:30:07.778Z",
            "egress.#": "2",
            "egress.0.cidr_blocks.#": "1",
            "egress.0.cidr_blocks.0": "0.0.0.0/0",
            "egress.0.description": "",
            "egress.0.from_port": "443",
            "egress.0.ipv6_cidr_blocks.#": "0",
            "egress.0.prefix_list_ids.#": "0",
            "egress.0.protocol": "tcp",
            "egress.0.security_groups.#": "0",
            "egress.0.self": "false",
            "egress.0.to_port": "443",
            "egress.1.cidr_blocks.#": "1",
            "egress.1.cidr_blocks.0": "0.0.0.0/0",
            "egress.1.description": "lambda",
            "egress.1.from_port": "0",
            "egress.1.ipv6_cidr_blocks.#": "0",
            "egress.1.prefix_list_ids.#": "0",
            "egress.1.protocol": "-1",
            "egress.1.security_groups.#": "0",
            "egress.1.self": "false",
            "egress.1.to_port": "0",
            "id": "sg-0b22ad61b9e0f9367",
            "ingress.#": "4",
            "ingress.0.cidr_blocks.#": "1",
            "ingress.0.cidr_blocks.0": "0.0.0.0/0",
            "ingress.0.description": "",
            "ingress.0.from_port": "22",
            "ingress.0.ipv6_cidr_blocks.#": "0",
            "ingress.0.prefix_list_ids.#": "0",
            "ingress.0.protocol": "tcp",
            "ingress.0.security_groups.#": "0",
            "ingress.0.self": "false",
            "ingress.0.to_port": "22",
            "ingress.1.cidr_blocks.#": "1",
            "ingress.1.cidr_blocks.0": "0.0.0.0/0",
            "ingress.1.description": "",
            "ingress.1.from_port": "443",
            "ingress.1.ipv6_cidr_blocks.#": "0",
            "ingress.1.prefix_list_ids.#": "0",
            "ingress.1.protocol": "tcp",
            "ingress.1.security_groups.#": "0",
            "ingress.1.self": "false",
            "ingress.1.to_port": "443",
            "ingress.2.cidr_blocks.#": "1",
            "ingress.2.cidr_blocks.0": "0.0.0.0/0",
            "ingress.2.description": "",
            "ingress.2.from_port": "80",
            "ingress.2.ipv6_cidr_blocks.#": "0",
            "ingress.2.prefix_list_ids.#": "0",
            "ingress.2.protocol": "tcp",
            "ingress.2.security_groups.#": "0",
            "ingress.2.self": "false",
            "ingress.2.to_port": "80",
            "ingress.3.cidr_blocks.#": "0",
            "ingress.3.description": "Allow Lambda access only.",
            "ingress.3.from_port": "3306",
            "ingress.3.ipv6_cidr_blocks.#": "0",
            "ingress.3.prefix_list_ids.#": "0",
            "ingress.3.protocol": "tcp",
            "ingress.3.security_groups.#": "1",
            "ingress.3.security_groups.0": "sg-0b02998105dcfc1bf",
            "ingress.3.self": "false",
            "ingress.3.to_port": "3306",
            "name": "launch-wizard-2",
            "name_prefix": "",
            "owner_id": "571600864139",
            "tags.%": "1",
            "tags.cloud-nuke-first-seen": "2024-12-07T19:06:21Z",
            "tags_all.%": "1",
            "tags_all.cloud-nuke-first-seen": "2024-12-07T19:06:21Z",
            "vpc_id": "vpc-0a39a9d74cc90453c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfer--launch-wizard-3_sg-0a0cd914e36d17537",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:us-east-2:571600864139:security-group/sg-0a0cd914e36d17537",
            "description": "launch-wizard-3 created 2024-12-10T01:50:41.152Z",
            "egress.#": "1",
            "egress.0.cidr_blocks.#": "1",
            "egress.0.cidr_blocks.0": "0.0.0.0/0",
            "egress.0.description": "",
            "egress.0.from_port": "0",
            "egress.0.ipv6_cidr_blocks.#": "0",
            "egress.0.prefix_list_ids.#": "0",
            "egress.0.protocol": "-1",
            "egress.0.security_groups.#": "0",
            "egress.0.self": "false",
            "egress.0.to_port": "0",
            "id": "sg-0a0cd914e36d17537",
            "ingress.#": "2",
            "ingress.0.cidr_blocks.#": "1",
            "ingress.0.cidr_blocks.0": "0.0.0.0/0",
            "ingress.0.description": "",
            "ingress.0.from_port": "22",
            "ingress.0.ipv6_cidr_blocks.#": "0",
            "ingress.0.prefix_list_ids.#": "0",
            "ingress.0.protocol": "tcp",
            "ingress.0.security_groups.#": "0",
            "ingress.0.self": "false",
            "ingress.0.to_port": "22",
            "ingress.1.cidr_blocks.#": "1",
            "ingress.1.cidr_blocks.0": "0.0.0.0/0",
            "ingress.1.description": "",
            "ingress.1.from_port": "6379",
            "ingress.1.ipv6_cidr_blocks.#": "0",
            "ingress.1.prefix_list_ids.#": "0",
            "ingress.1.protocol": "tcp",
            "ingress.1.security_groups.#": "0",
            "ingress.1.self": "false",
            "ingress.1.to_port": "6379",
            "name": "launch-wizard-3",
            "name_prefix": "",
            "owner_id": "571600864139",
            "tags.%": "0",
            "tags_all.%": "0",
            "vpc_id": "vpc-0a39a9d74cc90453c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfer--launch-wizard-4_sg-0580b4caa740e983d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "arn": "arn:aws:ec2:us-east-2:571600864139:security-group/sg-0580b4caa740e983d",
            "description": "launch-wizard-4 created 2024-12-13T01:04:32.400Z",
            "egress.#": "1",
            "egress.0.cidr_blocks.#": "1",
            "egress.0.cidr_blocks.0": "0.0.0.0/0",
            "egress.0.description": "",
            "egress.0.from_port": "0",
            "egress.0.ipv6_cidr_blocks.#": "0",
            "egress.0.prefix_list_ids.#": "0",
            "egress.0.protocol": "-1",
            "egress.0.security_groups.#": "0",
            "egress.0.self": "false",
            "egress.0.to_port": "0",
            "id": "sg-0580b4caa740e983d",
            "ingress.#": "4",
            "ingress.0.cidr_blocks.#": "1",
            "ingress.0.cidr_blocks.0": "0.0.0.0/0",
            "ingress.0.description": "",
            "ingress.0.from_port": "22",
            "ingress.0.ipv6_cidr_blocks.#": "0",
            "ingress.0.prefix_list_ids.#": "0",
            "ingress.0.protocol": "tcp",
            "ingress.0.security_groups.#": "0",
            "ingress.0.self": "false",
            "ingress.0.to_port": "22",
            "ingress.1.cidr_blocks.#": "1",
            "ingress.1.cidr_blocks.0": "0.0.0.0/0",
            "ingress.1.description": "",
            "ingress.1.from_port": "443",
            "ingress.1.ipv6_cidr_blocks.#": "0",
            "ingress.1.prefix_list_ids.#": "0",
            "ingress.1.protocol": "tcp",
            "ingress.1.security_groups.#": "0",
            "ingress.1.self": "false",
            "ingress.1.to_port": "443",
            "ingress.2.cidr_blocks.#": "1",
            "ingress.2.cidr_blocks.0": "0.0.0.0/0",
            "ingress.2.description": "",
            "ingress.2.from_port": "5000",
            "ingress.2.ipv6_cidr_blocks.#": "0",
            "ingress.2.prefix_list_ids.#": "0",
            "ingress.2.protocol": "tcp",
            "ingress.2.security_groups.#": "0",
            "ingress.2.self": "false",
            "ingress.2.to_port": "5000",
            "ingress.3.cidr_blocks.#": "1",
            "ingress.3.cidr_blocks.0": "0.0.0.0/0",
            "ingress.3.description": "",
            "ingress.3.from_port": "80",
            "ingress.3.ipv6_cidr_blocks.#": "0",
            "ingress.3.prefix_list_ids.#": "0",
            "ingress.3.protocol": "tcp",
            "ingress.3.security_groups.#": "0",
            "ingress.3.self": "false",
            "ingress.3.to_port": "80",
            "name": "launch-wizard-4",
            "name_prefix": "",
            "owner_id": "571600864139",
            "tags.%": "0",
            "tags_all.%": "0",
            "vpc_id": "vpc-0a39a9d74cc90453c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tfer--sg-0b22ad61b9e0f9367_egress_-1_-1_-1_0-002E-0-002E-0-002E-0-002F-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes_flat": {
            "cidr_blocks.#": "1",
            "cidr_blocks.0": "0.0.0.0/0",
            "description": "lambda",
            "from_port": "0",
            "id": "sgrule-2506230125",
            "ipv6_cidr_blocks.#": "0",
            "prefix_list_ids.#": "0",
            "protocol": "-1",
            "security_group_id": "sg-0b22ad61b9e0f9367",
            "security_group_rule_id": "sgr-0f285059cf9781378",
            "to_port": "0",
            "type": "egress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tfer--sg-0b22ad61b9e0f9367_egress_tcp_443_443_0-002E-0-002E-0-002E-0-002F-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes_flat": {
            "cidr_blocks.#": "1",
            "cidr_blocks.0": "0.0.0.0/0",
            "from_port": "443",
            "id": "sgrule-3354627447",
            "ipv6_cidr_blocks.#": "0",
            "prefix_list_ids.#": "0",
            "protocol": "tcp",
            "security_group_id": "sg-0b22ad61b9e0f9367",
            "security_group_rule_id": "sgr-0795a6801c2cb6364",
            "to_port": "443",
            "type": "egress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tfer--sg-0b22ad61b9e0f9367_ingress_tcp_22_22_0-002E-0-002E-0-002E-0-002F-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes_flat": {
            "cidr_blocks.#": "1",
            "cidr_blocks.0": "0.0.0.0/0",
            "from_port": "22",
            "id": "sgrule-3487952646",
            "ipv6_cidr_blocks.#": "0",
            "prefix_list_ids.#": "0",
            "protocol": "tcp",
            "security_group_id": "sg-0b22ad61b9e0f9367",
            "security_group_rule_id": "sgr-046f2eb0a377dfc51",
            "to_port": "22",
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tfer--sg-0b22ad61b9e0f9367_ingress_tcp_3306_3306_sg-0b02998105dcfc1bf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes_flat": {
            "description": "Allow Lambda access only.",
            "from_port": "3306",
            "id": "sgrule-112812758",
            "prefix_list_ids.#": "0",
            "protocol": "tcp",
            "security_group_id": "sg-0b22ad61b9e0f9367",
            "security_group_rule_id": "sgr-012e992612c7650ec",
            "source_security_group_id": "sg-0b02998105dcfc1bf",
            "to_port": "3306",
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tfer--sg-0b22ad61b9e0f9367_ingress_tcp_443_443_0-002E-0-002E-0-002E-0-002F-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes_flat": {
            "cidr_blocks.#": "1",
            "cidr_blocks.0": "0.0.0.0/0",
            "from_port": "443",
            "id": "sgrule-1285829702",
            "ipv6_cidr_blocks.#": "0",
            "prefix_list_ids.#": "0",
            "protocol": "tcp",
            "security_group_id": "sg-0b22ad61b9e0f9367",
            "security_group_rule_id": "sgr-0795a6801c2cb6364",
            "to_port": "443",
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tfer--sg-0b22ad61b9e0f9367_ingress_tcp_80_80_0-002E-0-002E-0-002E-0-002F-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes_flat": {
            "cidr_blocks.#": "1",
            "cidr_blocks.0": "0.0.0.0/0",
            "from_port": "80",
            "id": "sgrule-2037363379",
            "ipv6_cidr_blocks.#": "0",
            "prefix_list_ids.#": "0",
            "protocol": "tcp",
            "security_group_id": "sg-0b22ad61b9e0f9367",
            "security_group_rule_id": "sgr-0ded3f8dc64e1b2d1",
            "to_port": "80",
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}